@@ -1,0 +1,5 @@
+[icd10::
+	F43.00,
+	F43.01,
+	F32.02;
+	F43.01]
